styles/bigblow/css/hideshow.css
/* hideshow.css --- HideShow CSS file */

/* Copyright (C) 2014 All Right Reserved, Fabrice Niessen */

/* This file is free software: you can redistribute it and/or */
/* modify it under the terms of the GNU General Public License as */
/* published by the Free Software Foundation, either version 3 of */
/* the License, or (at your option) any later version. */

/* This file is distributed in the hope that it will be useful, */
/* but WITHOUT ANY WARRANTY; without even the implied warranty of */
/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the */
/* GNU General Public License for more details. */

/* Author: Fabrice Niessen <(concat "fniessen" at-sign "pirilampo.org")> */
/* URL: https://github.com/fniessen/hide-show/ */
/* Version: 20140912.1722 */

.hsExpanded.hsAnchor {background: #EE7700;}

.buttons {
    padding: 0px 7px 13px 0px;
    background: #0A3F69;
}

.hsButton {
    color: white;
    float: right;
    font-size: 70%;
    margin-left: 10px;
}

    .hsButton:hover {
         background: #FBE448;
         color: black;
         cursor: pointer;
    }

.ellipsis {
    color: #999999;
    /* background-color: #FFF8C0; */
    /* float: right; */
    margin-left: 0.6em;
}

.hsReview {
    border: 1px solid #A4A4A4;
    background-color: white;
    z-index: 500; /* must be greater then z-index of hsOverlay */
    position: relative; /* required for z-index to work */
}

#hsOverlay {
    width: 100%;
    height: 100%;
    position: fixed;
    left: 0px;
    top: 0px;
    background-color: #000;
    opacity: .70;
    z-index: 250; /* must be greater than any other z-index (except the one for .hsReview */
}

.hsReviewPanel {
    background-color: #757176;
    color: white;
    line-height: 1.1em;
    margin: 10px 0px;
    padding: 10px;
    position: fixed;
    width: auto;
    bottom: 0px;
    right: 0px;
    z-index: 501;
    text-align: center;
}

    .hsReviewPanel.hsReviewing {
        display: none;
    }

    .hsReviewPanel:hover {
        cursor: pointer;
    }

.hsReviewingPanel {
    background-color: white;
    color: #757176;
    line-height: 1.1em;
    margin: 10px 0px;
    padding: 10px;
    position: fixed;
    width: auto;
    bottom: 0px;
    right: 0px;
    z-index: 501;
    text-align: center;
}

.hsReviewButton:hover {
    cursor: pointer;
}

.hsUnselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* This is for the sake of Emacs. */
/* Local Variables: */
/* eval: (when (locate-library "rainbow-mode") (require 'rainbow-mode) (rainbow-mode)) */
/* End: */

